--- a/interior/style.css
+++ b/interior/style.css
@@ -166,6 +166,7 @@ body {
     display: block;
     float: left;
 }
+
 .featured:hover {
     color: #212121;
     border-bottom: 3px solid #212121;
@@ -253,7 +254,6 @@ body {
 .card-content:hover {
     opacity: 0.9;
     background-color: #ffffff;
-    box-shadow: 0 2px 5px 1px rgba(33, 33, 33, 0.35);
     border: 0.3px solid #e8e8ef;
     box-sizing: border-box;
 }
@@ -280,7 +280,7 @@ body {
 }
 
 .card-button:active {
-    box-shadow: 0 2px 5px 1px rgba(50, 50, 50, 0.6);
+    box-shadow: 0 1px 1px 1px rgba(30, 30, 30, 0.3);
 }
 
 .card-title {
@@ -458,7 +458,6 @@ body {
     height: 516px;
     background-image: url(img/back-img.jpg);
     margin-top: 120px;
-    padding-top: 125p;
 }
 
 .app-text {
@@ -498,10 +497,13 @@ body {
     margin-right: 5px;
 }
 
+.app-image:hover {
+    box-shadow: 0px 10px 13px -7px #000000;
+}
 
 .footer {
     height: 384px;
-    background-color: background-color: #f7f7f7;
+    background-color: #f7f7f7;
     position: relative;
 }
 
@@ -600,6 +602,7 @@ body {
 }
 
 .email-line {
+    background-color: #ffffff;
     color: #6c6c6c;
     font-size: 14px;
     font-weight: 300;
@@ -618,9 +621,11 @@ body {
 }
 
 .submit {
-    width: 22px;
-    height: 22px;
+    width: 20px;
+    height: 20px;
     border: none;
+    font-size: 0px;
+    line-height: 35px;
     background-image: url(img/paper-plane-solid.svg);
     opacity: 0.4;
     display: inline-block;
@@ -635,6 +640,8 @@ body {
     opacity: 0.8;
 }
 
+.social-links {}
+
 .circle-link {
     display: inline-block;
     width: 28px;
@@ -642,8 +649,9 @@ body {
     border-radius: 50%;
     background-color: #6c6c6c;
     margin: 2px;
-    margin-bottom: 10px;
     line-height: 31px;
+    color: white;
+    font-size: 15px;
 }
 
 .circle-link:hover {
@@ -659,7 +667,8 @@ body {
     position: absolute;
     width: 1170px;
     text-align: center;
-    bottom: 30px;
+    bottom: 36px;
+
 }
 
 .cookies {
@@ -738,10 +747,6 @@ body {
     margin-bottom: 122px;
 }
 
-.contact-footer {
-    background-color: #f7f7f7;
-}
-
 .product-header {
     height: 360px;
     background-image: url(img/hero-back.svg);
@@ -812,10 +817,6 @@ body {
     margin-top: 174px;
 }
 
-.product-footer {
-    background-color: #f7f7f7;
-}
-
 .deals-header {
     height: 119px;
 }
@@ -868,6 +869,14 @@ body {
 
 .color-var {
     margin-right: 10px;
+}
+
+.color-var:hover {
+    outline: 1px solid #cdcdcd;
+}
+
+.color-var:active {
+    outline: 3px solid #cdcdcd;
 }
 
 .content-right-side {
@@ -974,8 +983,4 @@ body {
 
 .right-card {
     margin-right: 0px;
-}
-
-.deals-footer {
-    background-color: #f7f7f7;
 }
